@@ -94,8 +94,6 @@ function __autoload($className) {
 		'HistoryBlobStub' => 'includes/HistoryBlob.php',
 		'HistoryBlobCurStub' => 'includes/HistoryBlob.php',
 		'HTMLCacheUpdate' => 'includes/HTMLCacheUpdate.php',
-		'HTMLCacheUpdateJob' => 'includes/HTMLCacheUpdate.php',
-		'EnotifNotifyJob' => 'includes/JobQueue.php',
 		'Http' => 'includes/HttpFunctions.php',
 		'IP' => 'includes/IP.php',
 		'ThumbnailImage' => 'includes/Image.php',
@@ -104,6 +102,10 @@ function __autoload($className) {
 		'ImageHistoryList' => 'includes/ImagePage.php',
 		'ImageRemote' => 'includes/ImageRemote.php',
 		'Job' => 'includes/JobQueue.php',
+		'EmaillingJob' => 'includes/EmaillingJob.php',
+		'EnotifNotifyJob' => 'includes/EnotifNotifyJob.php',
+		'HTMLCacheUpdateJob' => 'includes/HTMLCacheUpdate.php',
+		'RefreshLinksJob' => 'includes/RefreshLinksJob.php',
 		'Licenses' => 'includes/Licenses.php',
 		'License' => 'includes/Licenses.php',
 		'LinkBatch' => 'includes/LinkBatch.php',
